--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
+beautifulsoup4==4.9.1
+certifi==2020.4.5.1
+chardet==3.0.4
 Django==2.2.12
 django-crispy-forms==1.9.1
 django-tinymce4-lite==1.8.0
+djangorestframework==3.11.0
+dnspython==1.16.0
+idna==2.9
 jsmin==2.2.2
 mysqlclient==1.4.6
 Pillow==7.1.2
+python-resize-image==1.1.19
 pytz==2020.1
+requests==2.23.0
+soupsieve==2.0.1
 sqlparse==0.3.1
+urllib3==1.25.9
